# videoslice

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/videoslice/: __init__.py  download.py  logger.py  slice.py
