[project]
name = "videoslice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Meek Msaki", email = "meek10x@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
videoslice = "videoslice:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
