[project]
name = "videoslice"
version = "0.1.2"
description = "A tool to slice YouTube videos into smaller segments"
readme = "README.md"
license = "MIT"
keywords = ["youtube", "video", "slicing", "tool", "ffmpeg"]
home-page = "https://github.com/mmsaki/videoslice"
authors = [
    { name = "Meek Msaki", email = "meek10x+videoslice@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2025.6.9",
]

[project.scripts]
videoslice = "videoslice:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
